@@ -18,6 +18,7 @@ rm -rf itrade
 echo "-------- Getting files from SVN"
 # anonymous login must have been done at least once
 svn export https://svn.sourceforge.net/svnroot/itrade/trunk -r HEAD itrade
+svn log https://svn.sourceforge.net/svnroot/itrade/trunk > REVISION
 
 echo "------- Removing file"
 for f in $to_be_removed;
